--- a/src/cascadia/TerminalSettingsEditor/Extensions.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Extensions.xaml
@@ -39,22 +39,71 @@
                 <Setter Property="VerticalScrollBarVisibility" Value="Disabled" />
             </Style>
 
-            <DataTemplate x:Key="ExtensionNavigatorTemplate"
+            <local:ExtensionPackageTemplateSelector x:Key="ExtensionPackageTemplateSelector"
+                                                    DefaultTemplate="{StaticResource DefaultExtensionNavigatorTemplate}"
+                                                    ComplexTemplate="{StaticResource ComplexExtensionNavigatorTemplate}" />
+
+            <DataTemplate x:Key="DefaultExtensionNavigatorTemplate"
                           x:DataType="local:ExtensionPackageViewModel">
                 <Button AutomationProperties.Name="{x:Bind AccessibleName}"
                         Click="ExtensionNavigator_Click"
                         Style="{StaticResource NavigatorButtonStyle}"
-                        Tag="{x:Bind Source}">
+                        Tag="{x:Bind}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
+
                         <TextBlock Grid.Column="0"
-                                   Text="{x:Bind Source}" />
+                                   Text="{x:Bind Package.Source}"/>
                         <TextBlock x:Uid="Extension_StateDisabled"
                                    Grid.Column="1"
                                    HorizontalAlignment="Right"
+                                   VerticalAlignment="Center"
+                                   Style="{StaticResource SecondaryTextBlockStyle}"
+                                   Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(Enabled)}" />
+                    </Grid>
+                </Button>
+            </DataTemplate>
+
+            <DataTemplate x:Key="ComplexExtensionNavigatorTemplate"
+                          x:DataType="local:ExtensionPackageViewModel">
+                <Button AutomationProperties.Name="{x:Bind AccessibleName}"
+                        Click="ExtensionNavigator_Click"
+                        Style="{StaticResource NavigatorButtonStyle}"
+                        Tag="{x:Bind}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <IconSourceElement Grid.Column="0"
+                                           Grid.Row="0"
+                                           Grid.RowSpan="2"
+                                           Width="32"
+                                           Height="32"
+                                           Margin="0,0,8,0"
+                                           IconSource="{x:Bind mtu:IconPathConverter.IconSourceWUX(Package.Icon)}"/>
+                        <TextBlock Grid.Column="1"
+                                   Grid.Row="0"
+                                   Text="{x:Bind Package.DisplayName}"/>
+                        <TextBlock Grid.Column="1"
+                                   Grid.Row="1"
+                                   Style="{StaticResource SettingsPageItemDescriptionStyle}"
+                                   Text="{x:Bind Package.Source}" />
+                        <TextBlock x:Uid="Extension_StateDisabled"
+                                   Grid.Column="2"
+                                   Grid.Row="0"
+                                   Grid.RowSpan="2"
+                                   HorizontalAlignment="Right"
+                                   VerticalAlignment="Center"
                                    Style="{StaticResource SecondaryTextBlockStyle}"
                                    Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(Enabled)}" />
                     </Grid>
@@ -291,9 +340,9 @@
                        Style="{StaticResource TextBlockSubHeaderStyle}" />
             <TextBlock x:Uid="Extensions_NoActiveExtensionsDisclaimer"
                        Style="{StaticResource ItalicDisclaimerStyle}"
-                       Visibility="{x:Bind ViewModel.NoActiveExtensions, Mode=OneWay}" />
+                       Visibility="{x:Bind ViewModel.NoExtensionPackages, Mode=OneWay}" />
             <ItemsControl IsTabStop="False"
-                          ItemTemplate="{StaticResource ExtensionNavigatorTemplate}"
+                          ItemTemplateSelector="{StaticResource ExtensionPackageTemplateSelector}"
                           ItemsSource="{x:Bind ViewModel.ExtensionPackages}" />
         </StackPanel>
 
@@ -303,26 +352,25 @@
                     Margin="0,-20,0,0"
                     Visibility="{x:Bind ViewModel.IsExtensionView, Mode=OneWay}">
             <!--  Extension Status  -->
-            <local:SettingContainer Header="{x:Bind ViewModel.CurrentExtensionSource, Mode=OneWay}"
+            <local:SettingContainer Header="{x:Bind ViewModel.CurrentExtensionPackage.Package.Source, Mode=OneWay}"
                                     StartExpanded="True"
                                     Style="{StaticResource ExpanderSettingContainerStyleWithComplexPreview}">
                 <local:SettingContainer.CurrentValue>
-                    <ToggleSwitch Loaded="ExtensionLoaded"
-                                  Style="{StaticResource ToggleSwitchInExpanderStyle}"
-                                  Tag="{x:Bind ViewModel.CurrentExtensionSource, Mode=OneWay}"
-                                  Toggled="ExtensionToggled" />
+                    <ToggleSwitch Style="{StaticResource ToggleSwitchInExpanderStyle}"
+                                  Tag="{x:Bind ViewModel.CurrentExtensionPackage.Package.Source, Mode=OneWay}"
+                                  IsOn="{x:Bind ViewModel.CurrentExtensionPackage.Enabled, Mode=TwoWay}" />
                 </local:SettingContainer.CurrentValue>
                 <local:SettingContainer.Content>
                     <StackPanel>
                         <!--  Scope  -->
                         <local:SettingContainer x:Uid="Extensions_Scope"
-                                                Content="{x:Bind ViewModel.CurrentExtensionScope, Mode=OneWay}"
+                                                Content="{x:Bind ViewModel.CurrentExtensionPackage.Scope, Mode=OneWay}"
                                                 IsTabStop="False"
                                                 Style="{StaticResource SettingContainerWithTextContent}" />
                         <!--  JSON  -->
                         <ItemsControl IsTabStop="False"
                                       ItemTemplate="{StaticResource JsonTemplate}"
-                                      ItemsSource="{x:Bind ViewModel.CurrentExtensionFragments, Mode=OneWay}" />
+                                      ItemsSource="{x:Bind ViewModel.CurrentExtensionPackage.FragmentExtensions, Mode=OneWay}" />
                     </StackPanel>
                 </local:SettingContainer.Content>
             </local:SettingContainer>
